[package]
name = "net-checker-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
commons = { path = "../commons" }
actix-web = "4.3.0"
mongodb = "2.6.0"
pulsar = "6.0.1"
tokio = "1.0"
futures = "0.3"
serde = { version = "1.0.137", features = ['derive'] }
serde_json = "1.0.81"